--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -79,6 +79,13 @@
                 </div>
 
                 <div class="skill">
+                    <p>Node.js</p>
+                    <div class="skill-bar">
+                        <div class="active-bar"></div>
+                    </div>
+                </div>
+
+                <div class="skill">
                     <p>Flask</p>
                     <div class="skill-bar">
                         <div class="active-bar"></div>
@@ -87,6 +94,13 @@
 
                 <div class="skill">
                     <p>MySQL</p>
+                    <div class="skill-bar">
+                        <div class="active-bar"></div>
+                    </div>
+                </div>
+
+                <div class="skill">
+                    <p>MongoDB</p>
                     <div class="skill-bar">
                         <div class="active-bar"></div>
                     </div>
