Added a project and updated my skills

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -198,6 +198,8 @@
                     <span id="html" class="tag" v-on:click="toggleFilter('HTML')">HTML</span>
                     <span id="css" class="tag"  v-on:click="toggleFilter('CSS')">CSS</span>
                     <span id="javascript" class="tag" v-on:click="toggleFilter('JavaScript')">JavaScript</span>
+                    <span id="vuejs" class="tag" v-on:click="toggleFilter('Node.js')">Node.js</span>
+                    <span id="nodejs" class="tag" v-on:click="toggleFilter('Vue.js')">Vue.js</span>
                     <span id="python" class="tag" v-on:click="toggleFilter('Python')">Python</span>
                     <span id="mysql" class="tag" v-on:click="toggleFilter('MySQL')">MySQL</span>
                 </div>
