Added CodeNote Project

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -200,6 +200,8 @@
                     <span id="javascript" class="tag" v-on:click="toggleFilter('JavaScript')">JavaScript</span>
                     <span id="vuejs" class="tag" v-on:click="toggleFilter('Node.js')">Node.js</span>
                     <span id="nodejs" class="tag" v-on:click="toggleFilter('Vue.js')">Vue.js</span>
+                    <span id="mongo" class="tag" v-on:click="toggleFilter('Mongo')">Mongo</span>
+                    <span id="MEVN" class="tag" v-on:click="toggleFilter('MEVN')">MEVN Stack</span>
                     <span id="python" class="tag" v-on:click="toggleFilter('Python')">Python</span>
                     <span id="mysql" class="tag" v-on:click="toggleFilter('MySQL')">MySQL</span>
                 </div>
